crates/shiplog-schema/tests/snapshots/format_stability__format_bundle_manifest_empty_files.snap
---
source: crates/shiplog-schema/tests/format_stability.rs
expression: manifest
---
{
  "run_id": "empty",
  "generated_at": "2025-06-01T12:00:00Z",
  "profile": "Internal",
  "files": []
}
