crates/shiplog-schema/tests/snapshots/format_stability__format_file_checksum_edge_cases.snap
---
source: crates/shiplog-schema/tests/format_stability.rs
expression: checksums
---
[
  {
    "path": "",
    "sha256": "",
    "bytes": 0
  },
  {
    "path": "deeply/nested/path/to/file with spaces.txt",
    "sha256": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
    "bytes": 18446744073709551615
  }
]
