crates/shiplog-schema/tests/snapshots/format_stability__format_manual_date_range.snap
---
source: crates/shiplog-schema/tests/format_stability.rs
expression: d
---
{
  "start": "2025-01-01",
  "end": "2025-12-31"
}
